[project]
name = "bt-ddos-shield"
version = "0.1"
requires-python = "~=3.12.3"

dependencies = [
    "bittensor~=8.5.1",
    "boto3~=1.35.27",
    "eciespy~=0.4.2",
    "pydantic~=2.10.5",
    "pydantic-settings~=2.7.1",
    "python-dotenv~=1.0.1",
    "route53~=1.0.1",
    "sqlalchemy~=2.0.36",
]

[tool.uv]
prerelease = "allow"
environments = ["sys_platform == 'linux'", "sys_platform == 'darwin'"]

[tool.pytest.ini_options]
addopts = "-s" # Shield tests run for a long time and user should see what is happening

[dependency-groups]
test = [
    "pytest",
]
format = [
    "ruff",
]
lint = [
    "ruff",
    "codespell[toml]",
]
type_check = [
    "boto3-stubs",
    "botocore-stubs",
    "mypy",
    "mypy-boto3-ec2",
    "mypy-boto3-elbv2",
    "mypy-boto3-route53",
    "mypy-boto3-s3",
    "mypy-boto3-wafv2",
    "types-python-dateutil",
    "types-requests",
]
security_check = [
    "bandit>=1.7.7",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
